# visual-race-timing

./: .gitignore  README.md  annotate.py  collate.py  detect.py  pyproject.toml  track.py
scripts/: get_point_in_video.py
visual_race_timing/: drawing.py  loader.py  media_player.py  race_config.py  reid_bank.py  timing_prior.py  tracker.py
