[project]
name = "visual-race-timing"
version = "0.1.0"
description = "Vision-assisted annotation of runners' laps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boxmot==22.0.0",
    "exif",
    "ffmpeg-python",
    "filterpy",
    "gdown",
    "iteround",
    "joblib",
    "lapx",
    "prompt_toolkit",
    "pyyaml",
    "sortedcontainers",
    "tabulate",
    "tensorboard",
    "timecode",
    "torch",
    "torchvision",
    "tqdm",
    "ultralytics==8.4.89",
]

[tool.setuptools.packages.find]
include = ["visual_race_timing*"]
exclude = ["data*", "vendor*", "scripts*"]
