[project]
name = "visual-race-timing"
version = "0.1.0"
description = "Vision-assisted annotation of runners' laps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boxmot==22.0.0",
    "exif",
    "iteround",
    "joblib",
    "prompt_toolkit",
    "pyyaml",
    "sortedcontainers",
    "tabulate",
    "timecode",
    "torch",
    "tqdm",
    "ultralytics==8.4.93",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["visual_race_timing*", "scripts*"]
exclude = ["data*", "vendor*"]
